--- a/style/style.css
+++ b/style/style.css
@@ -14,9 +14,9 @@ body {
 }
 
 .page {
-    width: 100%;
+    /*width: 100%;*/
     margin: 0 auto;
-    max-width: 1000px;
+    /*max-width: 1000px;*/
     padding: 20px;
 }
 
@@ -40,11 +40,15 @@ body {
 }
 
 .result > div {
-    width: 50%;
     padding: 20px;
     display: flex;
     flex-direction: column;
 }
+
+.result__log{
+	width: 50%;
+}
+
 .text-center {
     text-align: center;
 }
@@ -52,12 +56,12 @@ body {
 #message, #preview {
     margin-bottom: 20px;
 }
+
 #preview {
-    max-width: 100%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    border: 1px solid rgba(0,0,0,0.2);
+	box-sizing: border-box;
 }
+
 * {
     margin: 0;
         margin-right: 0px;
@@ -92,9 +96,10 @@ input[type="file"] {
     display: none;
 }
 
-#message, pre {
+#message, preview {
     width: 100%;
 }
+
 #message {
     display: flex;
     flex-direction: column;
@@ -117,3 +122,19 @@ input[type="file"] {
 #status { visibility: hidden; }
 
 #progressbar { visibility: hidden; }
+
+#pdf-buttons{
+	margin-top: 20px;
+}
+
+#pdf-prev{ 
+	height: 25px;
+	margin-right:20px;
+	background-color: #59859b;
+}
+
+#pdf-next{ 
+	height: 25px;
+	margin-right:20px;
+	background-color: #59859b;
+}
